chance-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.nginx.dev.yml
    kompose.version: 1.22.0 (955b78124)
  creationTimestamp: null
  labels:
    io.kompose.service: chance
  name: chance
spec:
  ports:
    - name: "3456"
      port: 3456
      targetPort: 3456
  selector:
    io.kompose.service: chance
status:
  loadBalancer: {}
