chance-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: chance-ingress
spec:
  tls:
    - hosts:
        - 'chancexyz-dev.net'
      secretName: chancexyz-dev-net-tls
  rules:
    - host: chancexyz-dev.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: chance-service
                port:
                  number: 80
